src/test/ui/nll/user-annotations/wf-self-type.stderr
error: lifetime may not live long enough
  --> $DIR/wf-self-type.rs:12:5
   |
LL | pub fn foo<'a, 'b>(u: &'b ()) -> &'a () {
   |            --  -- lifetime `'b` defined here
   |            |
   |            lifetime `'a` defined here
LL |     Foo::xmute(u)
   |     ^^^^^^^^^^^^^ returning this value requires that `'b` must outlive `'a`

error: aborting due to previous error

